force-app/main/default/objects/EmailMessage__c/EmailMessage__c.object-meta.xml
<CustomObject>
    <description>e2a Email message object. It is used to store incoming and optionally outgoing emails. Emails related to a target object (the object specified in e2a Email Service rules) can be shown as related list.</description>
    <label>e2a Email</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>