force-app/main/default/objects/EmailMessage__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>e2a Emails</relationshipLabel>
    <relationshipName>e2a_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>