force-app/main/default/objects/EmailMessage__c/fields/Bcc_Address__c.field-meta.xml
<CustomField>
    <fullName>Bcc_Address__c</fullName>
    <label>Bcc Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>