force-app/main/default/objects/EmailMessage__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>e2a Emails</relationshipLabel>
    <relationshipName>e2a_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>