force-app/main/default/objects/EmailMessage__c/fields/Cc_Address__c.field-meta.xml
<CustomField>
    <fullName>Cc_Address__c</fullName>
    <label>Cc Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>