force-app/main/default/objects/EmailMessage__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>e2a Emails</relationshipLabel>
    <relationshipName>e2a_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>