force-app/main/default/objects/EmailMessage__c/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>e2a Emails</relationshipLabel>
    <relationshipName>e2a_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>