force-app/main/default/objects/EmailMessage__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Email Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>