force-app/main/default/objects/EmailMessage__c/fields/Has_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment</label>
    <type>Checkbox</type>
</CustomField>