force-app/main/default/objects/EmailMessage__c/fields/HTML_Body_2__c.field-meta.xml
<CustomField>
    <fullName>HTML_Body_2__c</fullName>
    <inlineHelpText>This field will be used to extend the email body limit in case characters are above the base email body field limit</inlineHelpText>
    <label>HTML Body 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>