force-app/main/default/objects/EmailMessage__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <label>Importance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>