force-app/main/default/objects/EmailMessage__c/fields/Incoming__c.field-meta.xml
<CustomField>
    <fullName>Incoming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incoming</label>
    <type>Checkbox</type>
</CustomField>