force-app/main/default/objects/EmailMessage__c/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>e2a Emails</relationshipLabel>
    <relationshipName>e2a_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>