force-app/main/default/objects/EmailMessage__c/fields/Message_Date__c.field-meta.xml
<CustomField>
    <fullName>Message_Date__c</fullName>
    <label>Message Date</label>
    <type>DateTime</type>
</CustomField>