force-app/main/default/objects/EmailMessage__c/fields/Owner_Object__c.field-meta.xml
<CustomField>
    <fullName>Owner_Object__c</fullName>
    <label>Owner Object</label>
    <length>3</length>
    <type>Text</type>
</CustomField>