force-app/main/default/objects/EmailMessage__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>e2a Email</relationshipLabel>
    <relationshipName>e2a_Email</relationshipName>
    <type>Lookup</type>
</CustomField>