force-app/main/default/objects/EmailMessage__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>