force-app/main/default/objects/EmailMessage__c/fields/Text_Body__c.field-meta.xml
<CustomField>
    <fullName>Text_Body__c</fullName>
    <label>Text Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>