force-app/main/default/objects/EmailMessage__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>