force-app/main/default/objects/EmailMessage__c/listViews/Received.listView-meta.xml
<ListView>
    <fullName>Received</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Replied,Read,Forwarded</value>
    </filters>
    <label>Received</label>
</ListView>