force-app/main/default/objects/EmailMessage__c/listViews/Sent_Emails.listView-meta.xml
<ListView>
    <fullName>Sent_Emails</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent,Forwarded</value>
    </filters>
    <label>Sent Emails</label>
</ListView>